<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_arrow_bg"
    android:gravity="start"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/found_30_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:lineSpacingExtra="7sp"
        android:text="@string/found_30_re"
        android:textStyle="bold"
        android:textAppearance="@style/found_30_re"
        android:translationY="-2.32sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:id="@+id/item"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            android:src="@drawable/onboarding_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedCornersImageView" />

        <include
            android:id="@+id/food_price"
            layout="@layout/price_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_favorite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginHorizontal="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_unfavorite"
            app:layout_constraintBottom_toBottomOf="@+id/food_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/food_price" />

        <TextView
            android:id="@+id/product_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:gravity="top|start"
            android:lineSpacingExtra="5sp"
            android:maxLines="1"
            android:textStyle="bold"
            android:text="@string/ground_beef"
            android:textAppearance="@style/count"
            android:translationY="-2.32sp"
            app:layout_constraintEnd_toEndOf="@+id/ic_favorite"
            app:layout_constraintStart_toStartOf="@+id/rate_container"
            app:layout_constraintTop_toBottomOf="@+id/product_image" />

        <TextView
            android:id="@+id/product_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:gravity="top|start"
            android:maxLines="1"
            android:text="@string/with_baked"
            android:textAppearance="@style/don_t_have"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/product_title"
            app:layout_constraintStart_toStartOf="@+id/rate_container"
            app:layout_constraintTop_toBottomOf="@+id/product_title" />

        <LinearLayout
            android:id="@+id/rate_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:background="@drawable/ic_arrow_bg"
            android:orientation="horizontal"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="@+id/food_price"
            app:layout_constraintTop_toBottomOf="@+id/product_image">

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                tools:text="4.5"
                android:textStyle="bold"
                android:textAppearance="@style/rate"
                app:layout_constraintTop_toBottomOf="@+id/product_image" />

            <ImageView
                android:id="@+id/ic_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:src="@drawable/ic_rate_star"
                app:layout_constraintEnd_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="@+id/back" />


            <TextView
                android:id="@+id/rate_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                tools:text="(30+)"
                android:textAppearance="@style/rate_plus" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>